// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgIcon Component renders correctly 1`] = `
<svg viewBox="0 0 10 10" width="1em" height="1em" class="svg-icon">
  <use xlink:href="test.svg"></use>
</svg>
`;

exports[`SvgIcon Component renders with custom width and height 1`] = `
<svg viewBox="0 0 10 10" width="20px" height="20px" class="svg-icon">
  <use xlink:href="test.svg"></use>
</svg>
`;
